# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

# All LG gn-arguments

declare_args() {
  # Enables v8 injections mechanism
  use_injections = true

  # Enable sample WEBAPI
  enable_sample_webapi = true

  # Enable Browser control WEBAPI
  enable_browser_control_webapi = true

  # Enable Memory Manager WEBAPI
  enable_memorymanager_webapi = false

  # Disable NEVA_DCHECK by default
  neva_dcheck_always_on = false

  # Use ozone wayland external platform
  ozone_platform_wayland_external = false

  use_videotexture = false

  is_agl = false

  is_webos = false

  webos_product_type = "default"

  # Use Neva app runtime
  use_neva_appruntime = true

  # Use Neva media
  use_neva_media = true

  enable_webm_audio_codecs = true

  enable_webm_video_codecs = true

  use_gst_media = false

  # Use memory trace feature
  use_memory_trace = false

  # To be used as CBE library
  use_cbe = false

  # If CBE is used, include chrome in it
  is_chrome_cbe = false

  # If CBE is used, include app_shell in it
  is_app_shell_cbe = false

  # If CBE is use, include wam_demo in it
  is_wam_demo_cbe = false

  # Use webOS PmLog logging library
  use_pmlog = false

  # Use LTTng tracing library
  use_lttng = false

  # Use webOS specific GPU info collector
  # Needed if libpci is not available
  use_webos_gpu_info_collector = false

  # Use v8 snapshot feature
  use_webos_v8_snapshot = false
}

declare_args() {
  # Use in-process stacktrace dumper instead of system
  # stacktrace handler. Official builds will always disable it.
  enable_in_process_stacktraces = !is_webos

  # Enable optimizations to reduce writes to eMMC storages
  enable_emmc_optimizations = is_webos

  # Support single window mode
  use_single_window_mode = is_webos || is_agl
}
