# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

declare_args() {
  # Whether to use libgnome-keyring (deprecated by libsecret).
  # See http://crbug.com/466975 and http://crbug.com/355223.
  # Not all platforms have the gnome-keyring library, because of that
  # we disable the using of gnome-keyring for webos platform build.
  use_gnome_keyring = is_desktop_linux && use_glib && !is_webos
}
