# Copyright (c) 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

component("emulator") {
  output_name = "emulator"

  sources = [
    "emulator_data_source.cc",
    "emulator_data_source.h",
    "emulator_urls.cc",
    "emulator_urls.h",
  ]

  defines = [ "EMULATOR_IMPLEMENTATION" ]

  deps = [
    "//base",
    "//net",
  ]
}

source_set("unittests") {
  testonly = true

  sources = [
    "emulator_unittests.cc"
  ]

  deps = [
    ":emulator",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
